--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@shoukoo/backstage-plugin-scaffolder-cuelang",
-  "version": "0.2.0",
+  "version": "0.4.2",
   "description": "Backstage template action",
-  "main": "dist/index.cjs.js",
-  "types": "dist/index.d.ts",
+  "main": "index.js",
+  "types": "src/index.ts",
   "publishConfig": {
     "access": "public",
     "main": "dist/index.cjs.js",
@@ -14,8 +14,8 @@
   },
   "scripts": {
     "start": "backstage-cli backend:dev",
-    "build": "backstage-cli backend:build",
-    "lint": "backstage-cli lint",
+    "build": "backstage-cli package build",
+    "clean": "backstage-cli package clean",
     "test": "backstage-cli test",
     "prepack": "backstage-cli package prepack",
     "postpack": "backstage-cli package postpack",
