--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shoukoo/backstage-plugin-scaffolder-cuelang",
-  "version": "0.4.2",
+  "version": "0.4.6",
   "description": "Backstage template action",
   "main": "index.js",
   "types": "src/index.ts",
@@ -17,7 +17,7 @@
     "build": "backstage-cli package build",
     "clean": "backstage-cli package clean",
     "prepack": "backstage-cli package prepack",
-    "postpack": "backstage-cli package postpack",
+    "postpack": "backstage-cli package postpack"
   },
   "author": "Andy",
   "license": "MIT",
