--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shoukoo/backstage-plugin-scaffolder-cuelang",
-  "version": "0.4.7",
+  "version": "0.4.8",
   "description": "Backstage template action",
   "main": "index.js",
   "types": "src/index.ts",
@@ -28,7 +28,7 @@
     "@backstage/plugin-scaffolder-backend": "^1.15.0"
   },
   "devDependencies": {
-    "@backstage/backend-common": "^0.19.0",
+    "@backstage/cli": "^0.22.8",
     "@types/command-exists": "^1.2.0",
     "@types/fs-extra": "^11.0.1"
   },
